--- a/index.html
+++ b/index.html
@@ -56,6 +56,93 @@
            background-image: linear-gradient(to right, red , yellow);
            transform:rotate(-35deg);
           }
+          @media (max-width:459px){
+          	.inside h2{
+    		font-size:60px;
+    		margin-top:40px;
+    	}
+    	.line{
+           height:2.5px;
+           width:30%;
+           margin-top:40px;
+           margin-bottom:40px;
+           border-style:hidden;
+           background-image: linear-gradient(to right, red , yellow);
+           transform:rotate(-35deg);
+          }
+          i{
+    		font-size:2em !important;
+    		color:red;
+    		margin-top:30px;
+    		margin-left:45%;
+    	}
+    	  }
+
+    	  @media (min-width:460px) and (max-width:574px){
+    	  	.inside h2{
+    		font-size:60px;
+    		margin-top:40px;
+    	}
+    	.line{
+           height:2.5px;
+           width:30%;
+           margin-top:40px;
+           margin-bottom:40px;
+           border-style:hidden;
+           background-image: linear-gradient(to right, red , yellow);
+           transform:rotate(-35deg);
+          }
+          i{
+    		font-size:2em !important;
+    		color:red;
+    		margin-top:30px;
+    		margin-left:45%;
+    	}
+    	  }
+
+    	  @media (min-width:575px) and (max-width:767px){
+    	  	.inside h2{
+    		font-size:100px;
+    		margin-top:40px;
+    	}
+    	.line{
+           height:2.5px;
+           width:30%;
+           margin-top:40px;
+           margin-bottom:40px;
+           border-style:hidden;
+           background-image: linear-gradient(to right, red , yellow);
+           transform:rotate(-35deg);
+          }
+          i{
+    		font-size:3em !important;
+    		color:red;
+    		margin-top:30px;
+    		margin-left:45%;
+    	}
+    	  }
+
+    	  @media (min-width:768px) and (max-width:991px){
+    	  	  	.inside h2{
+    		font-size:100px;
+    		margin-top:40px;
+    	}
+    	.line{
+           height:2.5px;
+           width:30%;
+           margin-top:40px;
+           margin-bottom:40px;
+           border-style:hidden;
+           background-image: linear-gradient(to right, red , yellow);
+           transform:rotate(-35deg);
+          }
+          i{
+    		font-size:3em !important;
+    		color:red;
+    		margin-top:30px;
+    		margin-left:45%;
+    	}
+    	  }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Changa One' rel='stylesheet'>
